@@ -2219,7 +2219,7 @@ static gboolean timeout_callback (gpointer data)
 {
 SomeWidget *self = data;
 
-/* do stuff with self */
+/ * do stuff with self * /
 
 self-&gt;timeout_id = 0;
 
@@ -6293,14 +6293,14 @@ in thread B:
 static gboolean
 idle_callback (gpointer data)
 {
-/* gdk_threads_enter(); would be needed for g_idle_add() */
+/ * gdk_threads_enter(); would be needed for g_idle_add() * /
 
 SomeWidget *self = data;
-/* do stuff with self */
+/ * do stuff with self * /
 
 self-&gt;idle_id = 0;
 
-/* gdk_threads_leave(); would be needed for g_idle_add() */
+/ * gdk_threads_leave(); would be needed for g_idle_add() * /
 return FALSE;
 }
 
@@ -6308,7 +6308,7 @@ static void
 some_widget_do_stuff_later (SomeWidget *self)
 {
 self-&gt;idle_id = gdk_threads_add_idle (idle_callback, self)
-/* using g_idle_add() here would require thread protection in the callback */
+/ * using g_idle_add() here would require thread protection in the callback * /
 }
 
 static void
@@ -13387,11 +13387,11 @@ motion events from a %GDK_MOTION_NOTIFY event usually works like this:
 
 |[
 { 
-/* motion_event handler */
+/ * motion_event handler * /
 x = motion_event-&gt;x;
 y = motion_event-&gt;y;
-/* handle (x,y) motion */
-gdk_event_request_motions (motion_event); /* handles is_hint events */
+/ * handle (x,y) motion * /
+gdk_event_request_motions (motion_event); / * handles is_hint events * /
 }
 ]|
 
