@@ -23995,7 +23995,7 @@ visible_func (GtkTreeModel *model,
 GtkTreeIter  *iter,
 gpointer      data)
 {
-/* Visible if row is non-empty and first column is &quot;HI&quot; */
+/ * Visible if row is non-empty and first column is &quot;HI&quot; * /
 gchar *str;
 gboolean visible = FALSE;
 
@@ -25303,7 +25303,7 @@ is set on the result.
 GtkWidget *toplevel = gtk_widget_get_toplevel (widget);
 if (gtk_widget_is_toplevel (toplevel))
 {
-/* Perform action on toplevel. */
+/ * Perform action on toplevel. * /
 }
 ]|
 
@@ -29399,7 +29399,7 @@ on the window.
 static void
 fill_with_content (GtkWidget *vbox)
 {
-/* fill with content... */
+/ * fill with content... * /
 }
 
 int
@@ -32783,13 +32783,13 @@ Instead, use something similar to this:
 |[
 if (document_is_new)
 {
-/* the user just created a new document */
+/ * the user just created a new document * /
 gtk_file_chooser_set_current_folder (chooser, default_folder_for_saving);
 gtk_file_chooser_set_current_name (chooser, &quot;Untitled document&quot;);
 }
 else
 {
-/* the user edited an existing document */ 
+/ * the user edited an existing document * / 
 gtk_file_chooser_set_filename (chooser, existing_filename);
 }
 ]|
@@ -36898,7 +36898,7 @@ A common way to set up a group of radio group is the following:
 GSList *group = NULL;
 GtkRadioAction *action;
 
-while (/* more actions to add */)
+while (/ * more actions to add * /)
 {
 action = gtk_radio_action_new (...);
 
@@ -40430,7 +40430,7 @@ gchar *msgctxt = data;
 return (gchar*)g_dpgettext2 (GETTEXT_PACKAGE, msgctxt, msgid);
 }
 
-/* ... */
+/ * ... * /
 
 gtk_stock_add (items, G_N_ELEMENTS (items));
 gtk_stock_set_translate_func (&quot;odd-item-domain&quot;, my_translate_func, &quot;odd items&quot;); 
@@ -56397,13 +56397,13 @@ Instead, use something similar to this:
 |[
 if (document_is_new)
 {
-/* the user just created a new document */
+/ * the user just created a new document * /
 gtk_file_chooser_set_current_folder_uri (chooser, default_folder_for_saving);
 gtk_file_chooser_set_current_name (chooser, &quot;Untitled document&quot;);
 }
 else
 {
-/* the user edited an existing document */ 
+/ * the user edited an existing document * / 
 gtk_file_chooser_set_uri (chooser, existing_uri);
 }
 ]|
@@ -68340,13 +68340,13 @@ Instead, use something similar to this:
 |[
 if (document_is_new)
 {
-/* the user just created a new document */
+/ * the user just created a new document * /
 gtk_file_chooser_set_current_folder_file (chooser, default_file_for_saving);
 gtk_file_chooser_set_current_name (chooser, &quot;Untitled document&quot;);
 }
 else
 {
-/* the user edited an existing document */
+/ * the user edited an existing document * /
 gtk_file_chooser_set_file (chooser, existing_file);
 }
 ]|
