@@ -1,5 +1,14 @@
 2010-04-11  José Alburquerque  <jaalburqu@svn.gnome.org>
 
+	Regenerate docs once more to fix comment errors.
+
+	* gdk/src/gdk_docs.xml:
+	* gtk/src/gtk_docs.xml: Regenerated after fixing the
+	docextract_to_xml.py script to handle C++ multi-line comments in
+	function descriptions that include sample C++ code.
+
+2010-04-11  José Alburquerque  <jaalburqu@svn.gnome.org>
+
 	Regenerate docs with the new docextract_to_xml.py script.
 
 	* atk/src/atk_docs.xml:
